--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
   <h1>Gallery</h1>
   <div class="container">
 		<div id="carousel">
-			<figure><img src="/dist/img/gallery/4895.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4887.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4888.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4889.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4890.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4891.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4892.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4893.png" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4894.png" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4601.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4602.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4603.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4604.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4605.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4606.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4607.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4608.png" width="200" height="200" alt=""></figure>
+			<figure><img src="/dist/img/gallery/4609.png" width="200" height="200" alt=""></figure>
 		</div> 
 	</div> <br><br><br><br><br><br><br><br><br><br><br><br>  
 
