--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
   <h1>Gallery</h1>
   <div class="container">
 		<div id="carousel">
-			<figure><img src="/dist/img/gallery/4601.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4602.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4603.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4604.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4605.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4606.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4607.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4608.png" width="200" height="200" alt=""></figure>
-			<figure><img src="/dist/img/gallery/4609.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/k23wrZt/4601.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/Pw2tR7n/4602.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/PmY1gNK/4603.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/BLCsbZj/4604.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/ZVXJHSZ/4605.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/ZL0hZDm/4606.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/kcCRD6s/4607.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/4j8xmT3/4608.png" width="200" height="200" alt=""></figure>
+			<figure><img src="https://i.ibb.co/mDzHX7D/4609.png" width="200" height="200" alt=""></figure>
 		</div> 
 	</div> <br><br><br><br><br><br><br><br><br><br><br><br>  
 
