--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <section class="nav">
     <h1>HARMOLECULES</h1>
-    <h2>A BLOCKCHAIN P2E GAME ON HARMONY MAINNET!</h2>
+    <h2>BUILDING THE ULTIMATE METAVERSE</h2>
    <!-- <div class="nav-container">
       <a class="nav-tab" href="#tab-pwa">DOCS</a>
       <a class="nav-tab" href="#tab-graphql">ABOUT</a>
@@ -72,9 +72,9 @@
   <main class="main">
     <section class="slider" id="tab-pwa">
       <h1>PLAY</h1>
-      <h2>Use headphones for optimal experience! 
+      <h2>
         <br><br>
-        To play Harmolecules, click the button just below! <br> <br>
+        Beta testing will open soon!<br> <br>
       </h2>
     <center>  <a href="#">
         <span></span>
@@ -88,13 +88,13 @@
     <section class="slider" id="tab-graphql">
       <h1>ABOUT</h1>
       <h2>
-        8,888 basic life sustaining elements
+        Join us in building the ultimate Metaverse!
         <br><br>
-        We need your help to research all of the life sustaining elements.
+        HarMolecules is the foundational game of an all-inclusive Metaverse!
         <br><br>
-        By collecting & holding your elements, you can attempt to complete Reaction Bounties.
+        Help bring Harmony's great projects together on the molecular level!
         <br><br>
-        If you are able to complete them, you will receive something in return for your hard work from the Head Lab Team.
+        Collect & hold NFTs to help build the digital world of the future!
         </h2>
     </section>
    <!--<section class="slider" id="tab-next">
@@ -123,7 +123,7 @@
             INTRODUCTION
           </div>
           <div class="timeline__event__description">
-            <p>HarMolecules Laboratories has discovered traces of 8,888 life sustaining elements. We only have one problem, we are short on scientists & need your help to research all of them. We will begin to fill up HarMolecules Laboratories with top scientists & continue working towards our research goals. </p>
+            <p>HarMolecules Laboratories has discovered traces of 8,888 life sustaining elements, though only 2,222 are available on Space Sector X7, for now. We need your scientific expertise to research all of them.  </p>
           </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
           MATERIALIZATION
           </div>
           <div class="timeline__event__description">
-            <p>Now that we have enough scientists ready to go, we will be able to gather life sustaining elements for research. We will initiate higher scientist tiers & mint completion bonuses when scientists are able to gather all life sustaining elements! </p>
+            <p>With enough scientists ready to go, we can release the 2,222 life sustaining elements for further research. We will initiate higher scientist tiers & mint completion bonuses when scientists are able to gather all life sustaining elements! </p>
           </div>
           </div>
         </div>
@@ -157,7 +157,7 @@
           METHODS
           </div>
           <div class="timeline__event__description">
-            <p>Once all life sustaining elements are found, we will begin the research process. This will involve scientists working with different elements, creating different reactions, & working towards the Research Bounties! Once you are able to complete the Research Bounty, you will be rewarded from your hard work by the Head Lab Team at HarMolecules Laboratories.</p>
+            <p>Once enough life sustaining elements are found, we will begin the research process. Alone & together, scientists will experiment and complete reactions to save mankind. Complete certain experiments and be rewarded by the Head Lab Team on X7.</p>
           </div>
         
           </div>
@@ -175,7 +175,8 @@
           DATA
           </div>
           <div class="timeline__event__description">
-            <p>We will begin to gather data on how research at HarMolecules Laboratories is going, track progress of scientists, amount of reactions, & more metrics. As progress continues towards researching different elements & completing Reaction Bounties, the Head Lab Team will begin discussing partnerships & other collaborative efforts with outside parties. On our path to further our goal in finding & researching all 8,888 life sustaining elements, the Head Lab Team at HarMolecules Laboratories will bring in lab partners, new physical technology, extremely rare Reaction Bounties, & other collaborative efforts to further the research. </p>
+            <p>
+              On our path of researching all 8,888 life sustaining elements, the Head Lab Team will bring in lab partners, extremely rare Reaction Bounties, & novel technology to further the research. </p>
           </div>
           </div>
         </div>
@@ -193,7 +194,10 @@
             RESULTS
             </div>
             <div class="timeline__event__description">
-            <p>Upon completion of finding, researching, & collecting all 8,888 life sustaining elements, we will begin our journey of building a play-to-earn game to continue using your research data & elements to explore to the universe. As we near finding all 8,888 life sustaining elements, 3D printed collectables, surprise top scientist tier rewards, physical prints, full-res animated renders, collaborative efforts, HarMolecules Laboratories merch, & more, will become available to all those who have participated since the beginning. More information on the play-to-earn game & full completion bonuses will be released in the HarMolecules docs soon. The Head Lab Team will also be continuing our research to further HarMolecules Laboratories, we have gotten word of a potential problem that needs Scientists to help solve.</p>
+            <p>
+              Upon completion of experimentation on Space Sector X7, scientists will have all necessary items for exploration of the ultimate Metaverse. 
+              With partners in different realities, we will seek to chain together all known networks in the Ether.
+              </p>
             </div>
           </div>
           </div>
