--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <!-- partial:index.partial.html -->
 <center><nav id="main-menu">
   <ul class="nav-bar">
-       <li class="nav-button-home"><a href="#">Home</a></li>
+       <li class="nav-button-home"><a href="https://harmolecules.one">Home</a></li>
        <li class="nav-button-game"><a href="#">Game</a></li>
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Attributes</a></li>
        
   </ul>
 </nav></center>
