--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <center><nav id="main-menu">
   <ul class="nav-bar">
        <li class="nav-button-home"><a href="https://harmolecules.one">Home</a></li>
+       <li class="nav-button-home"><a href="https://mint.harmolecules.one">Mint</a></li>
        <li class="nav-button-game"><a href="#">Game</a></li>
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
@@ -36,6 +37,7 @@
   <section class="nav">
     <h1>HARMOLECULES</h1>
     <h2>BUILDING THE ULTIMATE METAVERSE</h2>
+    <li class="nav-button-home"><a href="https://mint.harmolecules.one">Mint</a></li>
    <!-- <div class="nav-container">
       <a class="nav-tab" href="#tab-pwa">DOCS</a>
       <a class="nav-tab" href="#tab-graphql">ABOUT</a>
