--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
        <li class="nav-button-game"><a href="#">Game</a></li>
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Attributes</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Rarity</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">Find Attributes</a></li>
        
   </ul>
 </nav></center>
