--- a/attributes.html
+++ b/attributes.html
@@ -118,6 +118,7 @@
   <canvas class="background" width="2000" height="10000"></canvas>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src="./gallery.js"></script>
 
   </body>
   </body>
