--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,8 @@
  <center><form>
     <div class="form-group">
         <h2 style="color: white;">Enter your HarMolecules ID # to search for attributes! (1-2222)</h2><br>
-        <textarea class="form-control-sm" id="exampleFormControlTextarea1" rows="1"></textarea><br><br>
-        <button type="submit" id="btn-search" class="btn btn-primary">SEARCH</button>
+        <textarea class="form-control-sm" id="input01" rows="1"></textarea><br><br>
+        <button type="" id="btnsearch" class="btn btn-primary">SEARCH</button>
 </form>
       </div>
  </form></center> 
@@ -52,8 +52,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
   <script src="./script.js"></script>
-  <script src="gallery.js"></script>
-  <script src="zindex.js"></script>
+  <script src="./gallery.js"></script>
 
   </body>
   </body>
