--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 </body>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src="./gallery.js"></script>
 
 </body>
 </html>
