--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
        <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Rarity</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">Find Attributes</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">LAB</a></li>
        
   </ul>
 </nav></center>
