--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
        <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Rarity</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">Find Attributes</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">Lab</a></li>
        
   </ul>
 </nav></center>
