--- a/attributes.html
+++ b/attributes.html
@@ -29,15 +29,15 @@
        <li class="nav-button-game"><a href="#">Game</a></li>
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Rarity</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">Lab</a></li>
-       
+       <li class="nav-button-products"><a href="https://harmolecules.com/attributes.html">Rarity</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.com/gallery.html">Lab</a></li>
+
   </ul>
 </nav></center>
 <body>
  <center><section class="slider1">
     <h1>Attributes & Rarity Data</h1>
-    <h2>Listed below is accurate rarity data for all attributes! <br> <br><br></h2> 
+    <h2>Listed below is accurate rarity data for all attributes! <br> <br><br></h2>
      <h3>Backgrounds <br> <br></h3>
     <h3> Blue, chance: '100', occurrence: '25% out of 100%' <br>
          Brown, chance: '100', occurrence: '25% out of 100%' <br>
@@ -94,7 +94,7 @@
     Water, chance: '100', occurrence: '24% out of 100%'   <br><br><br> </h3>
 
     <h3>Ranking <br> <br></h3>
- <h3>   
+ <h3>
     Command Sergeant Major, chance: '10', occurrence: '1% out of 100%' <br>
     Corporal, chance: '70', occurrence: '13% out of 100%' <br>
     First Sergeant, chance: '40', occurrence: '8% out of 100%' <br>
@@ -113,7 +113,7 @@
       <a class="nav-tab" href="#tab-deno">CONNECT</a>
       <span class="nav-tab-slider"></span>
     </div>--><br><br>
-  </section></center> 
+  </section></center>
 
   <canvas class="background" width="2000" height="10000"></canvas>
 
