--- a/gallery.html
+++ b/gallery.html
@@ -31,9 +31,9 @@
        <li class="nav-button-game"><a href="#">Game</a></li>
        <li class="nav-button-services"><a href="https://info.harmolecules.one/" target="_blank">Docs</a></li>
        <li class="nav-button-products"><a href="https://github.com/harmolecules" target="_blank">Code</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/attributes.html">Rarity</a></li>
-       <li class="nav-button-products"><a href="https://harmolecules.one/gallery.html">LAB</a></li>
-       
+       <li class="nav-button-products"><a href="https://harmolecules.com/attributes.html">Rarity</a></li>
+       <li class="nav-button-products"><a href="https://harmolecules.com/gallery.html">LAB</a></li>
+
   </ul>
 </nav></center>
 <body>
@@ -45,7 +45,7 @@
         <button type="" id="btnsearch" class="btn btn-primary">SEARCH</button>
 </form>
       </div>
- </form></center> 
+ </form></center>
 </div>
 
 
